Machine Learning working! VGG16 model prediction (99,04% acurácia e 2,78 px de erro)

--- a/Trabalho.ipynb
+++ b/Trabalho.ipynb
@@ -42,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T09:39:11.184344Z",
-     "end_time": "2023-06-01T09:39:12.623135Z"
+     "start_time": "2023-06-01T15:17:49.236314Z",
+     "end_time": "2023-06-01T15:17:51.940033Z"
     }
    }
   },
@@ -511,7 +511,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Visão Computacional"
+    "## Visão Computacional e Pick and Place"
    ],
    "metadata": {
     "collapsed": false
@@ -524,14 +524,24 @@
    "source": [
     "from ur5 import ComputerVision\n",
     "import time\n",
-    "cv = ComputerVision()"
+    "cv = ComputerVision()\n",
+    "cv.load_model()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:03:57.702460Z",
-     "end_time": "2023-05-29T10:03:57.802798Z"
+     "start_time": "2023-06-01T15:18:01.811679Z",
+     "end_time": "2023-06-01T15:18:02.466779Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Pose de Leitura de Imagem"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -544,9 +554,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:20.944949Z",
-     "end_time": "2023-05-29T10:13:22.481872Z"
+     "start_time": "2023-06-01T15:28:48.679545Z",
+     "end_time": "2023-06-01T15:28:50.334559Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### VGG16 - Transfer Learning - Visão Computacional"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -554,14 +573,26 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "cup_position = cv.move_cup()"
+    "cup_position = cv.move_cup()\n",
+    "predicted_cup_position = cv.predict()\n",
+    "print('Posição real do copo: ', cup_position)\n",
+    "print('Posição predita do copo: ', predicted_cup_position)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:22.480542Z",
-     "end_time": "2023-05-29T10:13:22.621503Z"
+     "start_time": "2023-06-01T15:28:50.332528Z",
+     "end_time": "2023-06-01T15:28:50.710476Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Pre-Graspping"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -569,15 +600,23 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Pre graspping\n",
-    "ur5.move_to_pose(cup_position+np.array([0, 0.2, 0.015]), [PI/2, 0, -PI/2])"
+    "ur5.move_to_pose(predicted_cup_position+np.array([0, 0.2, 0.015]), [PI/2, 0, -PI/2])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:22.623538Z",
-     "end_time": "2023-05-29T10:13:28.187537Z"
+     "start_time": "2023-06-01T15:28:50.711786Z",
+     "end_time": "2023-06-01T15:28:56.699022Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Graspping"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -585,13 +624,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(cup_position + np.array([0, 0.02, 0.017]), [PI / 2, 0, -PI / 2], duration=6)"
+    "ur5.move_to_pose(predicted_cup_position + np.array([0, 0.017, 0.017]), [PI / 2, 0, -PI / 2], duration=6)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:28.189541Z",
-     "end_time": "2023-05-29T10:13:33.037748Z"
+     "start_time": "2023-06-01T15:28:56.699600Z",
+     "end_time": "2023-06-01T15:29:02.132590Z"
     }
    }
   },
@@ -605,9 +644,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:33.038722Z",
-     "end_time": "2023-05-29T10:13:34.427536Z"
+     "start_time": "2023-06-01T15:29:02.133626Z",
+     "end_time": "2023-06-01T15:29:03.530831Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Pre-Placing"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -615,14 +663,23 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(np.array([0.4, 0, cup_position[2]+0.1]), [PI/2, 0, -PI/2], wrist='up', duration=10)"
+    "ur5.move_to_pose(np.array([0.4, 0, predicted_cup_position[2]+0.1]), [PI/2, 0, -PI/2], wrist='up', duration=10)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:34.428756Z",
-     "end_time": "2023-05-29T10:13:43.402190Z"
+     "start_time": "2023-06-01T15:29:03.532173Z",
+     "end_time": "2023-06-01T15:29:12.680278Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Placing"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -630,13 +687,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(np.array([0.4, 0, cup_position[2]+0.008]), [PI/2, 0, -PI/2], wrist='up')"
+    "ur5.move_to_pose(np.array([0.4, 0, predicted_cup_position[2]+0.008]), [PI/2, 0, -PI/2], wrist='up')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:43.403201Z",
-     "end_time": "2023-05-29T10:13:45.132908Z"
+     "start_time": "2023-06-01T15:29:12.682097Z",
+     "end_time": "2023-06-01T15:29:14.602678Z"
     }
    }
   },
@@ -651,8 +708,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:45.132892Z",
-     "end_time": "2023-05-29T10:13:47.511484Z"
+     "start_time": "2023-06-01T15:29:14.603158Z",
+     "end_time": "2023-06-01T15:29:17.214063Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Afastando do copo"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ur5.move_to_pose(np.array([0.4, .1, predicted_cup_position[2]+0.01]), [PI/2, 0, -PI/2], wrist='up')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-01T15:29:17.215066Z",
+     "end_time": "2023-06-01T15:29:19.136932Z"
     }
    }
   },
@@ -661,29 +742,23 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(np.array([0.4, .1, cup_position[2]+0.01]), [PI/2, 0, -PI/2], wrist='up')"
+    "ur5.move_to_pose(np.array([0.4, .1, predicted_cup_position[2]+0.2]), [PI/2, 0, -PI/2], wrist='up')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:47.513363Z",
-     "end_time": "2023-05-29T10:13:49.302862Z"
+     "start_time": "2023-06-01T15:29:19.138878Z",
+     "end_time": "2023-06-01T15:29:21.056574Z"
     }
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "ur5.move_to_pose(np.array([0.4, .1, cup_position[2]+0.2]), [PI/2, 0, -PI/2], wrist='up')"
+    "#### Voltando para a posição inicial"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:49.304422Z",
-     "end_time": "2023-05-29T10:13:50.892094Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -696,8 +771,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-29T10:13:50.893720Z",
-     "end_time": "2023-05-29T10:13:56.278248Z"
+     "start_time": "2023-06-01T15:29:21.056812Z",
+     "end_time": "2023-06-01T15:29:27.403137Z"
     }
    }
   }
