Added linear interpolation and other views to simulation

--- a/Trabalho.ipynb
+++ b/Trabalho.ipynb
@@ -32,18 +32,19 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import ur5\n",
+    "from ur5 import UR5, forward_kinematics\n",
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import time\n",
     "PI = math.pi\n",
-    "ur5 = ur5.UR5()"
+    "ur5 = UR5()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:38:52.286899Z",
-     "end_time": "2023-06-02T15:39:01.613429Z"
+     "start_time": "2023-06-03T23:08:24.278314Z",
+     "end_time": "2023-06-03T23:08:32.520695Z"
     }
    }
   },
@@ -84,7 +85,7 @@
    "outputs": [],
    "source": [
     "def validate_fk(ang):\n",
-    "    fk, _ = ur5.forward_kinematics(ang)    # Calcular cinemática direta a partir dos ângulos\n",
+    "    fk, _ = forward_kinematics(ang)    # Calcular cinemática direta a partir dos ângulos\n",
     "    print('Cinemática Direta: ')\n",
     "    print(fk)\n",
     "    ur5.move_to_config(ang)     # Mover para a posição\n",
@@ -96,8 +97,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-25T08:48:26.151484Z",
-     "end_time": "2023-05-25T08:48:26.153455Z"
+     "start_time": "2023-06-03T13:49:59.318798Z",
+     "end_time": "2023-06-03T13:49:59.365714Z"
     }
    }
   },
@@ -111,8 +112,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T19:31:56.435435Z",
-     "end_time": "2023-05-24T19:31:58.337829Z"
+     "start_time": "2023-06-03T13:50:01.112031Z",
+     "end_time": "2023-06-03T13:50:04.615711Z"
     }
    }
   },
@@ -126,8 +127,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T19:32:03.842988Z",
-     "end_time": "2023-05-24T19:32:10.775157Z"
+     "start_time": "2023-06-03T13:50:13.957694Z",
+     "end_time": "2023-06-03T13:50:20.675791Z"
     }
    }
   },
@@ -141,8 +142,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T18:41:36.763727Z",
-     "end_time": "2023-05-24T18:41:43.316082Z"
+     "start_time": "2023-06-03T13:50:27.776078Z",
+     "end_time": "2023-06-03T13:50:33.870308Z"
     }
    }
   },
@@ -156,8 +157,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T18:41:48.032509Z",
-     "end_time": "2023-05-24T18:41:52.059327Z"
+     "start_time": "2023-06-03T13:50:38.530478Z",
+     "end_time": "2023-06-03T13:50:42.538454Z"
     }
    }
   },
@@ -171,8 +172,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T18:42:07.422736Z",
-     "end_time": "2023-05-24T18:42:16.460524Z"
+     "start_time": "2023-06-03T13:50:47.900697Z",
+     "end_time": "2023-06-03T13:50:58.389785Z"
     }
    }
   },
@@ -186,8 +187,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-24T18:42:47.372871Z",
-     "end_time": "2023-05-24T18:42:51.127489Z"
+     "start_time": "2023-06-03T13:51:01.780858Z",
+     "end_time": "2023-06-03T13:51:14.388232Z"
     }
    }
   },
@@ -219,8 +220,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T14:17:43.917960Z",
-     "end_time": "2023-05-26T14:17:51.209569Z"
+     "start_time": "2023-06-03T13:51:28.344365Z",
+     "end_time": "2023-06-03T13:51:36.339443Z"
     }
    }
   },
@@ -234,8 +235,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T14:17:22.735427Z",
-     "end_time": "2023-05-26T14:17:29.592703Z"
+     "start_time": "2023-06-03T13:52:46.216909Z",
+     "end_time": "2023-06-03T13:52:53.019776Z"
     }
    }
   },
@@ -249,8 +250,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T14:18:56.376557Z",
-     "end_time": "2023-05-26T14:18:58.292913Z"
+     "start_time": "2023-06-03T13:54:15.547261Z",
+     "end_time": "2023-06-03T13:54:21.007206Z"
     }
    }
   },
@@ -264,8 +265,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T14:20:02.169140Z",
-     "end_time": "2023-05-26T14:20:03.703979Z"
+     "start_time": "2023-06-03T13:55:54.783287Z",
+     "end_time": "2023-06-03T13:55:56.661909Z"
     }
    }
   },
@@ -279,8 +280,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T14:21:26.228993Z",
-     "end_time": "2023-05-26T14:21:31.643983Z"
+     "start_time": "2023-06-03T13:55:58.671609Z",
+     "end_time": "2023-06-03T13:56:00.264856Z"
     }
    }
   },
@@ -294,8 +295,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-26T14:21:35.491666Z",
-     "end_time": "2023-05-26T14:21:40.394944Z"
+     "start_time": "2023-06-03T13:56:35.306996Z",
+     "end_time": "2023-06-03T13:56:39.947312Z"
     }
    }
   },
@@ -387,8 +388,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T10:49:01.260053Z",
-     "end_time": "2023-06-01T10:49:08.804227Z"
+     "start_time": "2023-06-03T13:57:33.699524Z",
+     "end_time": "2023-06-03T13:57:41.504804Z"
     }
    }
   },
@@ -413,8 +414,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T10:49:14.281184Z",
-     "end_time": "2023-06-01T10:49:14.651334Z"
+     "start_time": "2023-06-03T13:57:47.573299Z",
+     "end_time": "2023-06-03T13:57:48.065152Z"
     }
    }
   },
@@ -437,8 +438,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T10:47:44.294368Z",
-     "end_time": "2023-06-01T10:47:47.853409Z"
+     "start_time": "2023-06-03T13:58:40.086037Z",
+     "end_time": "2023-06-03T13:58:43.574978Z"
     }
    }
   },
@@ -452,8 +453,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T10:45:24.650123Z",
-     "end_time": "2023-06-01T10:45:28.153475Z"
+     "start_time": "2023-06-03T13:58:46.845068Z",
+     "end_time": "2023-06-03T13:58:50.748503Z"
     }
    }
   },
@@ -474,8 +475,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T10:45:58.800814Z",
-     "end_time": "2023-06-01T10:45:58.887601Z"
+     "start_time": "2023-06-03T13:58:56.318243Z",
+     "end_time": "2023-06-03T13:58:56.428254Z"
     }
    }
   },
@@ -503,8 +504,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-01T10:46:11.579308Z",
-     "end_time": "2023-06-01T10:46:11.749895Z"
+     "start_time": "2023-06-03T13:59:12.460272Z",
+     "end_time": "2023-06-03T13:59:12.676256Z"
     }
    }
   },
@@ -518,21 +519,12 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "from ur5 import ComputerVision\n",
-    "import time\n",
-    "cv = ComputerVision()\n",
-    "cv.load_model()"
+    "<img src=\"vgg16.jpg\">"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-06-02T15:42:57.151875Z",
-     "end_time": "2023-06-02T15:42:58.137439Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -554,8 +546,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:43:12.198370Z",
-     "end_time": "2023-06-02T15:43:15.998918Z"
+     "start_time": "2023-06-03T23:11:02.554126Z",
+     "end_time": "2023-06-03T23:11:04.255472Z"
     }
    }
   },
@@ -573,16 +565,17 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "cup_position = cv.move_cup()\n",
-    "predicted_cup_position = cv.predict()\n",
+    "cup_position = ur5.move_cup()\n",
+    "predicted_cup_position = ur5.predict()\n",
     "print('Posição real do copo: ', cup_position)\n",
-    "print('Posição predita do copo: ', predicted_cup_position)"
+    "print('Posição predita do copo: ', predicted_cup_position)\n",
+    "print('Erro: ', np.linalg.norm(cup_position - predicted_cup_position)*100, 'cm')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:32.601594Z",
-     "end_time": "2023-06-02T15:47:33.021000Z"
+     "start_time": "2023-06-03T23:11:04.255558Z",
+     "end_time": "2023-06-03T23:11:04.679597Z"
     }
    }
   },
@@ -605,8 +598,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:33.021097Z",
-     "end_time": "2023-06-02T15:47:39.194853Z"
+     "start_time": "2023-06-03T23:11:04.680482Z",
+     "end_time": "2023-06-03T23:11:12.759556Z"
     }
    }
   },
@@ -624,13 +617,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(predicted_cup_position + np.array([0, 0.017, 0.017]), [PI / 2, 0, -PI / 2], duration=6)"
+    "ur5.move_to_pose(predicted_cup_position + np.array([0, 0.018, 0.017]), [PI / 2, 0, -PI / 2], duration=6)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:39.196360Z",
-     "end_time": "2023-06-02T15:47:44.676307Z"
+     "start_time": "2023-06-03T23:11:12.759704Z",
+     "end_time": "2023-06-03T23:11:18.421776Z"
     }
    }
   },
@@ -644,8 +637,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:44.677724Z",
-     "end_time": "2023-06-02T15:47:46.058567Z"
+     "start_time": "2023-06-03T23:11:18.422499Z",
+     "end_time": "2023-06-03T23:11:19.814557Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ur5.move_to_pose(predicted_cup_position + np.array([0, 0.018, 0.047]), [PI / 2, 0, -PI / 2])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-03T23:11:19.815777Z",
+     "end_time": "2023-06-03T23:11:21.465317Z"
     }
    }
   },
@@ -663,13 +671,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(np.array([0.4, 0, predicted_cup_position[2]+0.1]), [PI/2, 0, -PI/2], wrist='up', duration=10)"
+    "ur5.move_to_pose(np.array([0.4, 0, 0.09]), [PI/2, 0, -PI/2], wrist='up', duration=10)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:46.061697Z",
-     "end_time": "2023-06-02T15:47:55.563551Z"
+     "start_time": "2023-06-03T23:11:21.466908Z",
+     "end_time": "2023-06-03T23:11:30.831772Z"
     }
    }
   },
@@ -687,13 +695,13 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "ur5.move_to_pose(np.array([0.4, 0, predicted_cup_position[2]+0.008]), [PI/2, 0, -PI/2], wrist='up')"
+    "ur5.move_to_pose(np.array([0.4, 0, 0.06]), [PI/2, 0, -PI/2], wrist='up')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:55.565239Z",
-     "end_time": "2023-06-02T15:47:57.450667Z"
+     "start_time": "2023-06-03T23:11:30.833643Z",
+     "end_time": "2023-06-03T23:11:32.735411Z"
     }
    }
   },
@@ -703,13 +711,13 @@
    "outputs": [],
    "source": [
     "ur5.open_gripper()\n",
-    "time.sleep(1)"
+    "time.sleep(2)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:47:57.452134Z",
-     "end_time": "2023-06-02T15:48:00.039443Z"
+     "start_time": "2023-06-03T23:11:32.736356Z",
+     "end_time": "2023-06-03T23:11:36.339237Z"
     }
    }
   },
@@ -732,8 +740,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:48:00.041705Z",
-     "end_time": "2023-06-02T15:48:01.731034Z"
+     "start_time": "2023-06-03T23:11:36.341134Z",
+     "end_time": "2023-06-03T23:11:38.051622Z"
     }
    }
   },
@@ -747,8 +755,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:48:01.731965Z",
-     "end_time": "2023-06-02T15:48:03.821992Z"
+     "start_time": "2023-06-03T23:11:38.053479Z",
+     "end_time": "2023-06-03T23:11:39.835165Z"
     }
    }
   },
@@ -771,8 +779,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-02T15:48:03.824573Z",
-     "end_time": "2023-06-02T15:48:09.487453Z"
+     "start_time": "2023-06-03T23:11:39.835280Z",
+     "end_time": "2023-06-03T23:11:45.735583Z"
     }
    }
   }
