removed useless files and folders

--- a/Trabalho.ipynb
+++ b/Trabalho.ipynb
@@ -29,8 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inicializando parâmetros do robô...\n",
+      "Obtendo handles dos objetos...\n",
+      "Pronto!\n"
+     ]
+    }
+   ],
    "source": [
     "from ur5 import UR5, forward_kinematics\n",
     "import math\n",
@@ -43,8 +53,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-03T23:08:24.278314Z",
-     "end_time": "2023-06-03T23:08:32.520695Z"
+     "start_time": "2023-06-07T06:41:18.846710Z",
+     "end_time": "2023-06-07T06:41:20.599107Z"
     }
    }
   },
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def validate_fk(ang):\n",
@@ -97,23 +107,42 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-03T13:49:59.318798Z",
-     "end_time": "2023-06-03T13:49:59.365714Z"
+     "start_time": "2023-06-07T05:58:13.889301Z",
+     "end_time": "2023-06-07T05:58:13.891857Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cinemática Direta: \n",
+      "[[ 6.12323400e-17 -1.00000000e+00  1.22464680e-16  1.09150000e-01]\n",
+      " [-1.00000000e+00 -6.12323400e-17 -1.11022302e-16 -5.53384648e-01]\n",
+      " [ 1.11022302e-16 -1.22464680e-16 -1.00000000e+00  3.33016545e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "Iterações totais:  20\n",
+      "Ground Truth: \n",
+      "[[ 4.11341800e-05 -9.99999999e-01  3.36090141e-06  1.10027054e-01]\n",
+      " [-9.99999766e-01 -4.11364670e-05 -6.83344021e-04 -5.52824884e-01]\n",
+      " [ 6.83344159e-04 -3.33279182e-06 -9.99999767e-01  3.33435691e-01]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n",
+      "Erro:  0.07040856323762457 %\n"
+     ]
+    }
+   ],
    "source": [
     "validate_fk([.5*PI, .05*PI, .45*PI, 0, -.5*PI, .5*PI])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-03T13:50:01.112031Z",
-     "end_time": "2023-06-03T13:50:04.615711Z"
+     "start_time": "2023-06-07T05:58:22.989430Z",
+     "end_time": "2023-06-07T05:58:27.723278Z"
     }
    }
   },
@@ -212,16 +241,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iterações totais:  20\n",
+      "Erro pose final:  0.10825011923256261 %\n"
+     ]
+    }
+   ],
    "source": [
     "ur5.move_to_pose([-0.1, -.55, .4], [PI, 0, PI/2], wrist='up')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-03T13:51:28.344365Z",
-     "end_time": "2023-06-03T13:51:36.339443Z"
+     "start_time": "2023-06-07T06:41:28.996951Z",
+     "end_time": "2023-06-07T06:41:32.759143Z"
     }
    }
   },
